--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "email": "foundation@zurb.com"
   },
   "dependencies": {
-    "fontawesome": "^4.7.2",
+    "@icon/font-awesome": "^4.7.0-2",
+    "font-awesome": "^4.7.0",
     "foundation-sites": "~6.4.0",
     "jquery": "^3.3.1",
     "motion-ui": "~1.2.2",
     "what-input": "^4.1.3"
   },
   "devDependencies": {
-    "font-awesome": "^4.7.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-load-plugins": "^1.1.0",
